COPRS-35: find metadata for product by ID
