# src/main/resources/native-api_openapi-gen.yml
@@ -9,24 +9,68 @@ servers:
 tags:
 - name: Metadata
 paths:
-  /api/v1/missions/{missionName}/products:
+  /api/v1/ping:
     get:
       tags:
-      - Products
-      summary: find product metadata for a given mission using a filter
-      description: To search for satellite product metadata the data can be filtered
-        by attributes which depend on the satellite mission. This endpoint allows
-        to retrieve filtered product metadata for the given mission.
-      operationId: FindProducts
+      - Metadata
+      summary: check whether the API service is reachable and running and retrieve
+        the API version number
+      description: A HTTP 200 answer is to be expected when the API service is running
+        and reachable. Additionally the current API version number will be retrieved.
+      operationId: PingApi
+      responses:
+        "500":
+          description: Internal Server Error - the API service encountered an unexpected
+            condition that prevented it from fulfilling the request
+          content: {}
+        "200":
+          description: OK - the API service is running and reachable
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PingResponse'
+        "400":
+          description: "Bad Request - the API service rejects to process the request\
+            \ because of client side errors, for example a malformed request syntax"
+  /api/v1/missions:
+    get:
+      tags:
+      - Metadata
+      summary: retrieve the names of the missions supported by the API
+      description: To search for satellite product data the data can be filtered by
+        attributes which depend on the product type which in turn depend on the satellite
+        mission. This endpoint returns all names of the missions supported by the
+        API.
+      operationId: GetMissions
+      responses:
+        "500":
+          description: Internal Server Error - the API service encountered an unexpected
+            condition that prevented it from fulfilling the request
+          content: {}
+        "400":
+          description: "Bad Request - the API service rejects to process the request\
+            \ because of client side errors, for example a malformed request syntax"
+        "200":
+          description: OK - the supperted mission names were returned with this response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Missions'
+  /api/v1/missions/{missionName}/productTypes:
+    get:
+      tags:
+      - Metadata
+      summary: retrieve the names of the product types supported for a particular
+        mission
+      description: To search for satellite product data the data can be filtered by
+        attributes which depend on the product type which in turn depend on the satellite
+        mission. This endpoint returns all names of the product types supported for
+        the given mission.
+      operationId: GetProductTypes
       parameters:
       - name: missionName
         in: path
         required: true
-        schema:
-          type: string
-      - name: filter
-        in: query
-        required: false
         schema:
           type: string
       responses:
@@ -34,16 +78,50 @@ paths:
           description: Internal Server Error - the API service encountered an unexpected
             condition that prevented it from fulfilling the request
           content: {}
+        "400":
+          description: "Bad Request - the API service rejects to process the request\
+            \ because of client side errors, for example a malformed request syntax"
         "200":
-          description: OK - the product metadata for the given mission and filter
-            was returned with this response
+          description: OK - the product type names for the given mission were returned
+            with this response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductTypes'
+  /api/v1/missions/{missionName}/products/{productId}:
+    get:
+      tags:
+      - Products
+      summary: find product metadata of a single product for a given product ID
+      description: This endpoint allows to retrieve the metadata of a single product
+        by its mission and ID.
+      operationId: FindProduct
+      parameters:
+      - name: missionName
+        in: path
+        required: true
+        schema:
+          type: string
+      - name: productId
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        "500":
+          description: Internal Server Error - the API service encountered an unexpected
+            condition that prevented it from fulfilling the request
+          content: {}
+        "400":
+          description: "Bad Request - the API service rejects to process the request\
+            \ because of client side errors, for example a malformed request syntax"
+        "200":
+          description: OK - the product metadata for the given mission and product
+            ID was returned with this response
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ProductMetadata'
-        "400":
-          description: "Bad Request - the API service rejects to process the request\
-            \ because of client side errors, for example a malformed request syntax"
   /api/v1/missions/{missionName}/productTypes/{productType}/products:
     get:
       tags:
@@ -54,7 +132,7 @@ paths:
         by attributes which depend on product type which in turn depend on the satellite
         mission. This endpoint allows to retrieve filtered product metadata for the
         given mission and product type.
-      operationId: FindProducts_1
+      operationId: FindProducts
       parameters:
       - name: missionName
         in: path
@@ -82,6 +160,41 @@ paths:
         "200":
           description: "OK - the product metadata for the given mission, product type\
             \ and filter was returned with this response"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductMetadata'
+  /api/v1/missions/{missionName}/products:
+    get:
+      tags:
+      - Products
+      summary: find product metadata for a given mission using a filter
+      description: To search for satellite product metadata the data can be filtered
+        by attributes which depend on the satellite mission. This endpoint allows
+        to retrieve filtered product metadata for the given mission.
+      operationId: FindProducts_1
+      parameters:
+      - name: missionName
+        in: path
+        required: true
+        schema:
+          type: string
+      - name: filter
+        in: query
+        required: false
+        schema:
+          type: string
+      responses:
+        "500":
+          description: Internal Server Error - the API service encountered an unexpected
+            condition that prevented it from fulfilling the request
+          content: {}
+        "400":
+          description: "Bad Request - the API service rejects to process the request\
+            \ because of client side errors, for example a malformed request syntax"
+        "200":
+          description: OK - the product metadata for the given mission and filter
+            was returned with this response
           content:
             application/json:
               schema:
@@ -123,85 +236,6 @@ paths:
               schema:
                 type: string
                 format: binary
-  /api/v1/missions:
-    get:
-      tags:
-      - Metadata
-      summary: retrieve the names of the missions supported by the API
-      description: To search for satellite product data the data can be filtered by
-        attributes which depend on the product type which in turn depend on the satellite
-        mission. This endpoint returns all names of the missions supported by the
-        API.
-      operationId: GetMissions
-      responses:
-        "500":
-          description: Internal Server Error - the API service encountered an unexpected
-            condition that prevented it from fulfilling the request
-          content: {}
-        "200":
-          description: OK - the supperted mission names were returned with this response
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Missions'
-        "400":
-          description: "Bad Request - the API service rejects to process the request\
-            \ because of client side errors, for example a malformed request syntax"
-  /api/v1/missions/{missionName}/productTypes:
-    get:
-      tags:
-      - Metadata
-      summary: retrieve the names of the product types supported for a particular
-        mission
-      description: To search for satellite product data the data can be filtered by
-        attributes which depend on the product type which in turn depend on the satellite
-        mission. This endpoint returns all names of the product types supported for
-        the given mission.
-      operationId: GetProductTypes
-      parameters:
-      - name: missionName
-        in: path
-        required: true
-        schema:
-          type: string
-      responses:
-        "500":
-          description: Internal Server Error - the API service encountered an unexpected
-            condition that prevented it from fulfilling the request
-          content: {}
-        "200":
-          description: OK - the product type names for the given mission were returned
-            with this response
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProductTypes'
-        "400":
-          description: "Bad Request - the API service rejects to process the request\
-            \ because of client side errors, for example a malformed request syntax"
-  /api/v1/ping:
-    get:
-      tags:
-      - Metadata
-      summary: check whether the API service is reachable and running and retrieve
-        the API version number
-      description: A HTTP 200 answer is to be expected when the API service is running
-        and reachable. Additionally the current API version number will be retrieved.
-      operationId: PingApi
-      responses:
-        "500":
-          description: Internal Server Error - the API service encountered an unexpected
-            condition that prevented it from fulfilling the request
-          content: {}
-        "200":
-          description: OK - the API service is running and reachable
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/PingResponse'
-        "400":
-          description: "Bad Request - the API service rejects to process the request\
-            \ because of client side errors, for example a malformed request syntax"
   /api/v1/missions/{missionName}/attributes:
     get:
       tags:
@@ -223,6 +257,9 @@ paths:
           description: Internal Server Error - the API service encountered an unexpected
             condition that prevented it from fulfilling the request
           content: {}
+        "400":
+          description: "Bad Request - the API service rejects to process the request\
+            \ because of client side errors, for example a malformed request syntax"
         "200":
           description: OK - the base attribute names for the given mission were returned
             with this response
@@ -230,9 +267,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Attributes'
-        "400":
-          description: "Bad Request - the API service rejects to process the request\
-            \ because of client side errors, for example a malformed request syntax"
   /api/v1/missions/{missionName}/productTypes/{productType}/attributes:
     get:
       tags:
@@ -260,6 +294,9 @@ paths:
           description: Internal Server Error - the API service encountered an unexpected
             condition that prevented it from fulfilling the request
           content: {}
+        "400":
+          description: "Bad Request - the API service rejects to process the request\
+            \ because of client side errors, for example a malformed request syntax"
         "200":
           description: OK - the attribute names for the given mission and product
             type were returned with this response
@@ -267,11 +304,43 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Attributes'
-        "400":
-          description: "Bad Request - the API service rejects to process the request\
-            \ because of client side errors, for example a malformed request syntax"
 components:
   schemas:
+    PingResponse:
+      type: object
+      properties:
+        apiVersion:
+          type: string
+          description: the version of the API
+          example: "1.0"
+    Missions:
+      type: object
+      properties:
+        missions:
+          type: array
+          description: the names of the missions supported by the API
+          example:
+          - s1
+          - s2
+          - s3
+          items:
+            type: string
+            description: the names of the missions supported by the API
+            example: "[\"s1\",\"s2\",\"s3\"]"
+    ProductTypes:
+      type: object
+      properties:
+        productTypes:
+          type: array
+          description: the names of the product types for a particular mission
+          example:
+          - l1
+          - l2
+          - aux-safe
+          items:
+            type: string
+            description: the names of the product types for a particular mission
+            example: "[\"l1\",\"l2\",\"aux-safe\"]"
     Checksum:
       type: object
       properties:
@@ -392,41 +461,6 @@ components:
             type: string
             description: Links representing possible actions on the data
           description: Links representing possible actions on the data
-    Missions:
-      type: object
-      properties:
-        missions:
-          type: array
-          description: the names of the missions supported by the API
-          example:
-          - s1
-          - s2
-          - s3
-          items:
-            type: string
-            description: the names of the missions supported by the API
-            example: "[\"s1\",\"s2\",\"s3\"]"
-    ProductTypes:
-      type: object
-      properties:
-        productTypes:
-          type: array
-          description: the names of the product types for a particular mission
-          example:
-          - l1
-          - l2
-          - aux-safe
-          items:
-            type: string
-            description: the names of the product types for a particular mission
-            example: "[\"l1\",\"l2\",\"aux-safe\"]"
-    PingResponse:
-      type: object
-      properties:
-        apiVersion:
-          type: string
-          description: the version of the API
-          example: "1.0"
     Attributes:
       type: object
       properties:
